ingress/promethes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.davidoluwatobi.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: prometheus-service
            port: 
              number: 9090
