ingress/socks-shop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress-socks-shop
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: socks-shop.davidoluwatobi.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: front-end
            port: 
              number: 8079
